# DigitsCPP

./: .gitignore  CMakeLists.txt  Performance.xlsx  README.md  project-meta-info.in
app/: CMakeLists.txt  main.cpp
examples/: test.ini
python/: activation_functions.py  file_check.ipynb  keras.ipynb  main.py  neural_network.py  read_input_data.py  requirements.txt
src/: CMakeLists.txt  functions.cpp  functions.h  inputdatafilereader.cpp  inputdatafilereader.h  neuralNetworkMethods.cpp  neuralNetworkMethods.h  neuralnetwork.cpp  neuralnetwork.h  neuralnetworkloop.cpp  neuralnetworkloop.h  readwritematrixtocsv.cpp  readwritematrixtocsv.h  typedefs.h
test/: CMakeLists.txt  functionstest.cpp  inputdatafilereadertest.cpp  neuralNetworkMethodsTest.cpp  neuralnetworklooptest.cpp  neuralnetworktest.cpp  readwritematrixtocsvtest.cpp  regression_input_W0.csv  regression_input_W1.csv  regression_input_b0.csv  regression_input_b1.csv  regression_output_W0.csv  regression_output_W1.csv  regression_output_b0.csv  regression_output_b1.csv  test_main.cpp  train_test.csv
